Add compile options and update version to 1.10.2

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,6 +31,11 @@ android {
         namespace 'appmire.be.flutterjailbreakdetection'
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     compileSdkVersion 33
 
     sourceSets {
